--- a/.github/workflows/robot.yml
+++ b/.github/workflows/robot.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Executar testes do Robot Framework
         run: |
-          robot -d ./logs ./unit-tests/tests
-        working-directory: ./unit-tests/tests
+          robot -d ./logs ./unit-tests/tests/
+        working-directory: ./unit-tests/tests/
 
       - name: Fazer deploy dos logs
         uses: actions/upload-artifact@v2
