--- a/.github/workflows/robot-treshold.yml
+++ b/.github/workflows/robot-treshold.yml
@@ -24,13 +24,13 @@ jobs:
 
       - name: Run Robot Framework tests
         run: |
-          pwd
-          coverage run -m robot ./unit-tests/tests/example.robot
+          coverage run -m robot ./unit-tests/tests/*.robot
 
       - name: Calculate code coverage
         run: |
-          coverage report -m
+          coverage report -m -i ./unit-tests/api-functions/*
           coverage xml -i
+          coverage yml -i
 
       - name: Check code coverage against thresholds
         run: |
