--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==3.0.0
-
+seaborn==0.13.0
+matplotlib==3.8.1
 robotframework==3.2.2
 robotframework-requests==0.7.2
 robotframework-sshlibrary==3.7
