--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -29,7 +29,7 @@ jobs:
       
       - name: Acceptance tests coverage
         run: |
-          coverage report --fail-under=95
+          coverage report --omit=*keywords.py --fail-under=95
           coverage xml
       
       - name: Update codecov for acceptance tests
