--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,9 +34,9 @@ jobs:
         echo "Deploying to EC2"
         echo "$AWS_SSH_PRIVATE_KEY" > key.pem
         chmod 600 key.pem
-        scp -i key.pem -r * ec2-user@$EC2_INSTANCE_IP:/seminario
+        scp -i key.pem -r * ubuntu@$EC2_INSTANCE_IP:/seminario
 
     - name: Run Application on EC2
       run: |
         echo "Running the Python application"
-        ssh -i key.pem ec2-user@$EC2_INSTANCE_IP "cd /seminario/src && python api.py"
+        ssh -i key.pem ubuntu@$EC2_INSTANCE_IP "cd /seminario/src && python api.py"
