--- a/.github/workflows/run_commands.yaml
+++ b/.github/workflows/run_commands.yaml
@@ -19,8 +19,10 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ubuntu@${HOSTNAME} '
               cd /home/ubuntu/ &&
               rm -rf ~/seminario-c214 || true &&
+              kill -9 $(lsof -i TCP:8080) || true &&
               git clone git@github.com:paulolopestech/seminario-c214.git &&
               cd ./seminario-c214 &&
               pip install -r  requirements.txt &&
-              python3 ./src/api.py
+              python3 ./src/api.py & &&
+              exit
               '
